force-app/main/default/objects/Visit_Report__c/Visit_Report__c.object-meta.xml
<CustomObject>
    <description>Post-visit log created by the Onco Global Agentforce agent. Stores the rep voice transcript, AI summary, discussion topics, and follow-up actions for each physician visit.</description>
    <label>Visit Report</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Visit Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>