force-app/main/default/objects/Visit_Report__c/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <description>3-bullet AI summary generated by Einstein Prompt Builder from the voice transcript.</description>
    <inlineHelpText>Auto-generated by Agentforce. Do not edit manually.</inlineHelpText>
    <label>AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>