force-app/main/default/objects/Visit_Report__c/fields/Discussion_Topics__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Topics__c</fullName>
    <description>Key topics discussed during the physician visit, extracted from the voice transcript by Agentforce.</description>
    <inlineHelpText>Semicolon-separated topics extracted from the transcript.</inlineHelpText>
    <label>Discussion Topics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>