force-app/main/default/objects/Visit_Report__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>Physician engagement score for this visit (0-100). Calculated by Agentforce based on sentiment, topics discussed, and outcome.</description>
    <inlineHelpText>Score from 0 to 100. Auto-calculated by Agentforce.</inlineHelpText>
    <label>Engagement Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>