force-app/main/default/objects/Visit_Report__c/fields/Follow_Up_Actions__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Actions__c</fullName>
    <description>Action items extracted from the visit transcript. Each item becomes a Salesforce Task when the agent processes the record.</description>
    <inlineHelpText>Semicolon-separated action items. Each will auto-create a Task.</inlineHelpText>
    <label>Follow-Up Actions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>