force-app/main/default/objects/Visit_Report__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The hospital or healthcare facility where the visit took place. Populated automatically from the prescriber's linked Account when a Contact-based prescriber is resolved.</description>
    <inlineHelpText>The hospital or clinic where this visit occurred.</inlineHelpText>
    <label>Hospital / Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hospital Visit Reports</relationshipLabel>
    <relationshipName>Hospital_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>