force-app/main/default/objects/Visit_Report__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by Agentforce when Einstein STT transcription confidence is below 60%. Prompts the rep to manually review and edit the AI-generated summary and transcript (BR-010).</description>
    <inlineHelpText>Flagged automatically when AI transcription confidence is low. Please review and edit the transcript and summary.</inlineHelpText>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>