force-app/main/default/objects/Visit_Report__c/fields/Next_Best_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Action__c</fullName>
    <description>AI-recommended next best action for this physician relationship, generated by Agentforce after visit analysis.</description>
    <inlineHelpText>Auto-populated by Agentforce based on visit outcome and physician history.</inlineHelpText>
    <label>Next Best Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>