force-app/main/default/objects/Visit_Report__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The physician or clinic account visited by the sales rep.</description>
    <inlineHelpText>Select the physician or clinic Account for this visit.</inlineHelpText>
    <label>Physician / Clinic</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Reports</relationshipLabel>
    <relationshipName>Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>