force-app/main/default/objects/Visit_Report__c/fields/Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Prescriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The individual prescriber (Contact) visited by the rep. Use this for physician Contacts linked to a hospital Account. The legacy Physician__c (Account) field remains for backward compatibility.</description>
    <inlineHelpText>Select the Individual Prescriber Contact for this visit.</inlineHelpText>
    <label>Individual Prescriber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Reports</relationshipLabel>
    <relationshipName>Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>