force-app/main/default/objects/Visit_Report__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The medical sales rep who conducted the physician visit.</description>
    <inlineHelpText>Auto-populated with the logged-in user who created the record.</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Visit Reports</relationshipLabel>
    <relationshipName>Visit_Reports_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>