force-app/main/default/objects/Visit_Report__c/fields/Total_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Amount__c</fullName>
    <description>Total of all Expense__c records linked to this Visit Report. Maintained by ExpenseTrigger.</description>
    <inlineHelpText>Total Rs. spent on this visit. Updated automatically when expenses are added or changed.</inlineHelpText>
    <label>Total Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>