force-app/main/default/objects/Visit_Report__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <description>Date the physician visit took place.</description>
    <inlineHelpText>Auto-set to today when the record is created.</inlineHelpText>
    <label>Visit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>