force-app/main/default/objects/Visit_Report__c/fields/Visit_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Visit_Outcome__c</fullName>
    <description>Overall outcome of the physician visit as assessed by the sales rep or Agentforce.</description>
    <inlineHelpText>Select the outcome of this visit.</inlineHelpText>
    <label>Visit Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Follow-Up Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>