force-app/main/default/objects/Visit_Report__c/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <description>Type of visit conducted. Used to segment visit activity in dashboards and reports (FR-VIS-004).</description>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person Clinic</fullName>
                <default>true</default>
                <label>In-Person Clinic</label>
            </value>
            <value>
                <fullName>Hospital Round</fullName>
            </value>
            <value>
                <fullName>Virtual Call</fullName>
            </value>
            <value>
                <fullName>Conference / Event</fullName>
            </value>
            <value>
                <fullName>Drop-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>