force-app/main/default/objects/Visit_Report__c/fields/Voice_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Voice_Transcript__c</fullName>
    <description>Raw voice transcript captured by the sales rep via the Onco Global mobile agent.</description>
    <inlineHelpText>Auto-populated from voice input. You can also type directly here.</inlineHelpText>
    <label>Voice Transcript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>