force-app/main/default/objects/Visit_Report__c/validationRules/VR_001_VisitDateNotFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_001_VisitDateNotFuture</fullName>
    <active>true</active>
    <description>VR-001: Visit date cannot be set to a future date. A visit can only be logged for today or a past date.</description>
    <errorConditionFormula>Visit_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Visit_Date__c</errorDisplayField>
    <errorMessage>Visit date cannot be in the future. Please enter today&apos;s date or a past date.</errorMessage>
</ValidationRule>